# hcaptcha-rs-no-wasm

./: CHANGELOG.md  Cargo.toml  README.md
hcaptcha-cli/: Cargo.toml
hcaptcha-cli/src/: main.rs
hcaptcha-no-wasm/: Cargo.toml  release.toml
hcaptcha-no-wasm/examples/custom_contact_lambda/: handler.rs
hcaptcha-no-wasm/examples/custom_contact_lambda/handler/: error.rs  validate.rs
hcaptcha-no-wasm/examples/derived_contact_lambda/: handler.rs
hcaptcha-no-wasm/src/: captcha.rs  client.rs  error.rs  hcaptcha.rs  lib.rs  request.rs  response.rs
hcaptcha_derive/: Cargo.toml
hcaptcha_derive/src/: lib.rs
hcaptcha_derive/tests/expand/: complete_struct.expanded.rs
hcaptcha_derive_no_wasm/: Cargo.toml
hcaptcha_derive_no_wasm/src/: lib.rs
hcaptcha_derive_no_wasm/tests/compile_fail/: complete_enum.rs  no_field_enum.rs  no_field_struct.rs
hcaptcha_derive_no_wasm/tests/expand/: complete_struct.expanded.rs  complete_struct.rs
mock-verifier/: Cargo.toml
mock-verifier/src/: tc001_blank_sitekey.rs
test-suite-default/: Cargo.toml
test-suite-default/tests/ui/compilefail/: not_a_struct.rs
test-suite-default/tests/ui/pass/: helper.rs  test_invalid_secret_v2.rs  test_invalid_sitekey.rs
test-suite-enterprise/: Cargo.toml
test-suite-enterprise/tests/ui/pass/: test_invalid_secret.rs  test_invalid_token.rs  test_with_sitekey.rs
test-suite-native-only/: Cargo.toml
test-suite-native-only/tests/ui/compilefail/: captcha_not_identified.rs
test-suite-native-only/tests/ui/pass/: test_complete_error_response.rs
test-suite-no-default/: Cargo.toml
test-suite-no-default/tests/ui/pass/: hcaptcha_integration.rs  test_blank_sitekey.rs  test_complete_success_response.rs
test-suite-rustls-only/: Cargo.toml
test-suite-rustls-only/tests/ui/compilefail/: captcha_not_identified.rs  not_a_struct.rs
test-suite-rustls-only/tests/ui/pass/: hcaptcha_integration.rs  test_simple.rs
test-suite-trace/: Cargo.toml
test-suite-trace/tests/ui/pass/: hcaptcha_integration.rs  test_invalid_remoteip.rs  test_with_remoteip.rs
