[package]
name = "hcaptcha-cli"
version = "0.4.10"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
clap-verbosity-flag.workspace = true
color-eyre.workspace = true
hcaptcha-no-wasm = { path = "../hcaptcha-no-wasm", features = ["enterprise"] }

[target.x86_64-unknown-linux-gnu.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
