[package]
name = "hcaptcha_derive_no_wasm"
version = "3.0.0"
edition = "2018"
description = """
Derive macro for hCaptcha. Please use hcaptcha-no-wasm crate.
"""
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerusdp/hcaptcha-rs"
readme = "README.md"
documentation = "https://docs.rs/hcaptcha_derive_no_wasm"
categories = ["web-programming"]
keywords = ["hcaptcha", "captcha", "security", "backend", "protection"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "CHANGES.md",
]

[lib]
name = "hcaptcha_derive_no_wasm"
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
proc-macro-error2.workspace = true

[dev-dependencies]
hcaptcha-no-wasm = { path = "../hcaptcha-no-wasm" }
macrotest.workspace = true
trybuild.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
