[package]
name = "mock-verifier"
version = "0.3.9"
rust-version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
rocket.workspace = true
serde.workspace = true
serde_json.workspace = true
hcaptcha-no-wasm = { path = "../hcaptcha-no-wasm", features = ["enterprise"] }
serde_urlencoded.workspace = true
