[package]
name = "test-suite-trace"
version = "0.7.9"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
trace = []

[dependencies]

[dev-dependencies]
chrono.workspace = true
claims.workspace = true
env_logger.workspace = true
hex.workspace = true
hcaptcha-no-wasm = { path = "../hcaptcha-no-wasm", features = [
    "trace",
    "enterprise",
] }
hcaptcha_derive_no_wasm = { path = "../hcaptcha_derive_no_wasm" }
itertools.workspace = true
mockd.workspace = true
rand.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
trybuild.workspace = true
wiremock.workspace = true
